@@ -121,8 +121,6 @@ Krang.onload( function() {
 <input name="id" value="<tmpl_var escape=html template_id>" type="hidden">
 <input name="id_meth" value="template_id" type="hidden">
 <input name="history_return_script" value="template.pl" type="hidden">
-<input name="history_return_script" value="return_script" type="hidden">
-<input name="history_return_script" value="template.pl" type="hidden">
 <input name="history_return_params" value="rm" type="hidden">
 <input name="history_return_params" value="view" type="hidden">
 <input name="history_return_params" value="template_id" type="hidden">
